# femto

./: .gitignore  CMakeLists.txt  README.md  STATUS_REPORT.md  VSCODE.md  hello_world
.mimocode/plans/: 1783248416520-quiet-nebula.md  1783336048848-stellar-harbor.md
examples/: bubble_sort.femto  error_handling.femto  factorial.femto  fibonacci.femto  fizzbuzz.femto  float_math.femto  gcd.femto  generics.femto  hello_world.femto  patterns.femto  primes.femto  structs_enums.femto
src/: CMakeLists.txt  main.cpp
src/codegen/c/: c.cpp  c.h
src/codegen/x86_64/: x86_64.cpp  x86_64.h
src/common/: diagnostic.cpp  diagnostic.h  diagnostic.test.cpp  source_location.h  string_pool.cpp  string_pool.h
src/examples/: examples.test.cpp
src/hir/: ast_to_hir.cpp  ast_to_hir.h  hir.h  hir_optimizer.cpp  hir_optimizer.h
src/lexer/: lexer.cpp  lexer.h  lexer.test.cpp  token.cpp  token.h
src/lir/: hir_to_lir.cpp  hir_to_lir.h  lir.h  lir_optimizer.cpp  lir_optimizer.h
src/parser/: ast.h  ast_dump.cpp  ast_dump.h  parser.cpp  parser.h  parser.test.cpp
src/sema/: sema.test.cpp  symbol_table.cpp  symbol_table.h  type_checker.cpp  type_checker.h  type_resolver.h  type_system.cpp  type_system.h
src/std/: collection.femto  io.femto  mem.femto  string8.femto
tests/integration/basic_types/: types.femto
tests/integration/codegen/: codegen.femto
tests/integration/control_flow/: control.femto
tests/integration/error_handling/: error.femto
tests/integration/generics/: generics.femto
tests/integration/modules/: modules.femto
vscode-femto/: language-configuration.json  package.json
vscode-femto/syntaxes/: femto.tmLanguage.json
